--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <div class = "head-bottom flex">
                 <h2>Hostel Booking Made Easy</h2>
                 <p></p>
-                <button type = "button" class = "head-btn"> <a style="color: white; text-decoration:none"; href = './bookform/bookroom.php'> FIND A HOSTEL </a></button>
+                <button type = "button" class = "head-btn"> <a style="color: white; text-decoration:none"; href = '#hostels'> FIND A HOSTEL </a></button>
             </div>
         </header>
         <!-- end of header -->
